# kent

./: .gitignore  .pre-commit-config.yaml  .pyre_configuration  CHANGELOG.md  CHANGES.md  LICENSE  README.md  pyproject.toml
.claude/skills/design-scraper/: SKILL.md  kent-api-reference.md
.github/workflows/: check_changelog.yml  lint.yml  pypi.yml  release-check.yml  tests.yml
jkent/: contracts.py  data_types.py  preps.py
jkent/common/: checked_html.py  data_models.py  decorator_metadata.py  decorators.py  deferred_validation.py  exceptions.py  lxml_page_element.py  page_element.py  param_models.py  parser.py  selector_observer.py  speculative.py  wait_conditions.py
jkent/driver/: __init__.py  _speculation_support.py  archive_handler.py
jkent/driver/browser_engine/: __init__.py  browser_profile.py  worker_page.py
jkent/driver/browser_engine/engines/: __init__.py  base.py  camoufox.py  playwright.py
jkent/driver/database_engine/: __init__.py  compression.py  database.py  errors.py  models.py  queue.py  scoped_session.py  staging.py  stats.py  storage.py
jkent/driver/database_engine/migrations/: __init__.py
jkent/driver/database_engine/sql_manager/: __init__.py  (+11 more)
jkent/driver/replay/: __init__.py  error_pruning.py  errors.py  source_index.py
jkent/driver/unified_driver/: __init__.py  bootstrap.py  compression.py  continuation.py  interstitials.py  lifecycle.py  orchestration.py  persistence.py  rate_limiter.py  replay_run.py  replay_worker.py  run.py  speculation.py  worker.py
kent/: preps.py
kent/common/: request_manager.py
kent/driver/playwright_driver/: playwright_driver.py
scripts/: release.py  run_unified.py  unreleased_changes.py
tests/: conftest.py  db_staging.py  mock_server.py  test_exceptions.py  test_preps.py  test_utils.py  utils.py
tests/contracts/: __init__.py  properties.py  test_properties.py
tests/data_types/: test_accumulated_data.py  test_archive_request.py  test_basescraper_introspection.py  test_deduplication.py  test_deferred_validation_errors.py  test_field_threading.py  test_navigating_request.py  test_nonnavigating_request.py  test_permanent_data.py  test_priority.py  test_via_field.py
tests/database_engine/: conftest.py  test_compression_errors.py  test_errors.py  test_migrations.py  test_playwright_db_persistence.py  test_scoped_session.py  test_stats.py
tests/database_engine/sql_manager/: test_base.py  test_estimates.py  test_incidental_requests.py  test_listing.py  test_requests.py  test_responses.py  test_results.py  test_run_metadata.py  test_types.py  test_validation.py
tests/decorators/: test_entry.py  test_single_page.py
tests/driver/: test_streaming_archive_handler.py
tests/driver/unified/: conftest.py  test_add_seed_params.py  test_archive_fidelity.py  test_async_lifecycle_conformance.py  test_autowait_e2e.py  test_bootstrap.py  test_camoufox_transport.py  test_can_playwright_wait.py  test_compactor.py  test_continuation.py  test_data_types_e2e.py  test_e2e.py  test_engine_selection.py  test_form_transport_conformance.py  test_h11_patch.py  test_httpx_classification.py  test_httpx_fidelity.py  test_httpx_follow_redirects.py  test_interstitial_racing.py  test_monitor.py  test_monitor_conformance.py  test_persistence.py  test_playwright_archive.py  test_playwright_concurrency.py  test_playwright_transport.py  test_rate_limiter.py  test_recoverable_conformance.py  test_replay_error_free.py  test_replay_fidelity.py  test_replay_idempotence.py  test_replay_storage.py  test_request_queue.py  test_run.py  test_run_conformance.py  test_run_conservation.py  test_run_lifecycle_machine.py  test_run_wiring.py  test_serialization.py  test_speculation.py  test_storage.py  (+5 more)
tests/form_conformance/: __init__.py  echo_server.py  harness.py  model.py  strategies.py
tests/parsing/: test_checked_html_errors.py  test_lxml_page_element.py  test_page_element.py  test_parser.py  test_selector_observer.py
tests/persistent_driver/core/: test_word_image_captcha.py
tests/playwright/: test_mich_hcaptcha_prep.py  test_request_prep.py
tests/rate_limiting/: test_rate_limiting.py
tests/scraper/: __init__.py
tests/scraper/example/: __init__.py  bug_court.py  bug_court_accumulated_data.py
(+5 files in other folders)
